# RaproM

./: .gitignore  README.md  pyproject.toml  raprom.example.toml  raprom_env.yml
RaProM/: CorrecRawFiles-py_3-11.py  CorrecRawFiles-py_38.py  CorrecRawFiles.py  README.md  RaProM.py  RaProM_27.py  RaProM_3-11.py  RaProM_38.py  RaProM_test.ipynb  __init__.py  benchmark.py  cancellation.py  cli.py  config.py  correction.py  gui.py  io.py  netcdf.py  processing.py
stations/: station-a.yaml  station-b.yaml  station-template.yaml
tests/: conftest.py  test_benchmark.py  test_cli.py  test_config.py  test_correction.py  test_gui.py  test_netcdf.py  test_processing_classification.py
