[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raprom"
version = "0.1.0"
description = "MRR2 raw radar processing tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1",
    "matplotlib",
    "miepython>=3.2",
    "netCDF4>=1.7.2",
    "cftime",
    "PyYAML>=6",
    "tomli>=2; python_version<'3.11'",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
raprom = "raprom.cli:main"

[tool.setuptools.packages.find]
include = ["raprom*"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp"
testpaths = ["tests"]
